--- a/test/fixtures/sources.yml
+++ b/test/fixtures/sources.yml
@@ -1,11 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  id_classification: one
   name: MyString
-  description: MyText
+  link: MyString
 
 two:
-  id_classification: two
   name: MyString
-  description: MyText
+  link: MyString
